// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/LinearProgress Animation 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "minWidth": "300px",
    }
  }
>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      data-css-lskj0=""
    />
  </div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Value: 
    0
  </div>
</div>
`;

exports[`Storyshots Components/LinearProgress Fills Container 1`] = `
<div
  style={
    Object {
      "background": "rgba(0, 100, 255, 0.5)",
      "padding": "8px",
      "width": "200px",
    }
  }
>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      66%
    </div>
    <div
      data-css-1y8zqkb=""
    />
  </div>
</div>
`;

exports[`Storyshots Components/LinearProgress Min Width No Val 1`] = `
<div
  aria-busy="true"
  aria-label="download video"
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  data-css-f5n0d7=""
  role="progressbar"
>
  <div
    data-css-lskj0=""
  />
</div>
`;

exports[`Storyshots Components/LinearProgress Values And Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div>
    0
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      data-css-lskj0=""
    />
  </div>
  <div>
    25
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={25}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      25%
    </div>
    <div
      data-css-1rwpn2j=""
    />
  </div>
  <div>
    33
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      33%
    </div>
    <div
      data-css-6wpswa=""
    />
  </div>
  <div>
    50
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      50%
    </div>
    <div
      data-css-qfqbsq=""
    />
  </div>
  <div>
    66
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      66%
    </div>
    <div
      data-css-1y8zqkb=""
    />
  </div>
  <div>
    75
  </div>
  <div
    aria-busy="true"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      75%
    </div>
    <div
      data-css-ich03u=""
    />
  </div>
  <div>
    100
  </div>
  <div
    aria-busy="false"
    aria-label="download video"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    data-css-f5n0d7=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      complete
    </div>
    <div
      data-css-1hrjrcb=""
    />
  </div>
</div>
`;
